--- a/Downloader+Installer/ErendoraDownloader/ErendoraDownloader/ErendoraDownloader.vbproj
+++ b/Downloader+Installer/ErendoraDownloader/ErendoraDownloader/ErendoraDownloader.vbproj
@@ -68,10 +68,10 @@
     <ApplicationIcon>flyff_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>55B51644417568FC52AE522959511E03301CCFA7</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>AFF368C99C2DD5969BD9E03D47B16812C2F8AAE8</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>ErendoraDownloader_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>ErendoraDownloader_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -80,8 +80,14 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ionic.BZip2">
+      <HintPath>..\Lib\Tools\Ionic.BZip2.dll</HintPath>
+    </Reference>
     <Reference Include="Ionic.Zip">
-      <HintPath>..\Lib\zip-v1.9\Debug\Ionic.Zip.dll</HintPath>
+      <HintPath>..\Lib\Tools\Ionic.Zip.dll</HintPath>
+    </Reference>
+    <Reference Include="Ionic.Zlib">
+      <HintPath>..\Lib\Tools\Ionic.Zlib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -92,6 +98,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Zipit">
+      <HintPath>..\Lib\Tools\Zipit.exe</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
@@ -201,6 +210,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ErendoraDownloader_1_TemporaryKey.pfx" />
     <None Include="ErendoraDownloader_TemporaryKey.pfx" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
