--- a/Downloader+Installer/ErendoraDownloader/ErendoraDownloader/ErendoraDownloader.vbproj
+++ b/Downloader+Installer/ErendoraDownloader/ErendoraDownloader/ErendoraDownloader.vbproj
@@ -68,10 +68,10 @@
     <ApplicationIcon>flyff_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>AFF368C99C2DD5969BD9E03D47B16812C2F8AAE8</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>A0548AE2066FFC0C792FCC81814F738FEC29CAB7</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>ErendoraDownloader_1_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>ErendoraDownloader_2_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -211,6 +211,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ErendoraDownloader_1_TemporaryKey.pfx" />
+    <None Include="ErendoraDownloader_2_TemporaryKey.pfx" />
     <None Include="ErendoraDownloader_TemporaryKey.pfx" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
